Fix spacing product grid slider

--- a/src/postcss/blocks/product-grid.css
+++ b/src/postcss/blocks/product-grid.css
@@ -8,7 +8,7 @@
       display: block;
 
       & .product {
-        margin: 0 5px;
+        padding: 0 10px;
       }
 
       &.columns-4 {
